# AP

./: .gitignore  4elt.graph  CMakeLists.txt  Dijkstra Test.txt  arcflag.h  edge.h  functions.cpp  functions.h  graph.cpp  graph.h  heap.cpp  heap.h  main.cpp  node.h  practical.cpp  run_cpp.sh  test.graph
LaTeXFolder/: Arc-Flags-Dijkstra.aux  Arc-Flags-Dijkstra.fdb_latexmk  Arc-Flags-Dijkstra.fls  Arc-Flags-Dijkstra.tex  boundaryNode.aux  boundaryNode.fdb_latexmk  boundaryNode.fls  boundaryNode.tex  dijkstra.aux  dijkstra.fdb_latexmk  dijkstra.fls  dijkstra.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  references.bib
pythonPlottingFolder/: plot.ipynb
